[gd_scene load_steps=10 format=3 uid="uid://b6sdx5v5l772m"]

[ext_resource type="Script" uid="uid://brncsdifpd8ke" path="res://Scripts/Interface/hud.gd" id="1_toh8p"]
[ext_resource type="Texture2D" uid="uid://clny3k8wxq5x1" path="res://Assets/Interface/GameOverImage.jpg" id="2_7b8ht"]
[ext_resource type="AudioStream" uid="uid://cejno8tv42g36" path="res://Assets/Audio/musica/level_song.wav" id="2_ftljh"]
[ext_resource type="Texture2D" uid="uid://bsiu6yvfgiroo" path="res://Assets/Interface/VitoriasSujo.jpg" id="3_ftljh"]
[ext_resource type="Texture2D" uid="uid://b0eo0x4xcairy" path="res://Assets/Interface/VitoriaLimpo.jpg" id="4_k3s11"]
[ext_resource type="Script" uid="uid://drk55k12qbjvp" path="res://Scripts/Interface/temporizador.gd" id="5_wa2qo"]
[ext_resource type="Shader" uid="uid://c0wsmi65f3y7d" path="res://Scripts/Shaders/efeito_tela.gdshader" id="7_po4ji"]
[ext_resource type="Texture2D" uid="uid://bmvky7k2qcug2" path="res://Assets/Interface/white.png" id="8_pqhgn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pqhgn"]
shader = ExtResource("7_po4ji")
shader_parameter/brightness = 1.1
shader_parameter/contrast = 1.1
shader_parameter/saturation = 1.1

[node name="HUD" type="Control"]
z_index = 199
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_toh8p")
musica_level = ExtResource("2_ftljh")
imagens_fim_jogo = Dictionary[int, CompressedTexture2D]({
0: ExtResource("2_7b8ht"),
1: ExtResource("3_ftljh"),
2: ExtResource("4_k3s11")
})

[node name="Temporizador" type="Node" parent="."]
script = ExtResource("5_wa2qo")

[node name="ColorCorrectionEffect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_pqhgn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pqhgn")

[node name="LabelMudas" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0.958641, 0.425073, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "Arvores a serem plantadas: "

[node name="LabelTempo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.956863, 0.423529, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "02:00"
horizontal_alignment = 1
visible_characters = 6
visible_ratio = 1.2

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
modulate = Color(0.117, 0.27795, 0.45, 0.745098)
layout_mode = 0
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -175.0
offset_right = 200.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelTit" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Pausado"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PauseMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonJogo" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Continuar Jogo"

[node name="VSeparator2" type="VSeparator" parent="PauseMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonRestart" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Reiniciar Level"

[node name="VSeparator3" type="VSeparator" parent="PauseMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Voltar Menu"

[node name="StartMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StartMenu"]
modulate = Color(0.225724, 0.46692, 0.315934, 0.643137)
layout_mode = 0
offset_left = -205.0
offset_top = -50.0
offset_right = -165.0
offset_bottom = -10.0
scale = Vector2(11.3826, 3.75964)

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelStartText" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Jogo come√ßa em"
horizontal_alignment = 1

[node name="LabelStartCount" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="GameOverMenu" type="Control" parent="."]
visible = false
z_index = 99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImagemFim" type="Sprite2D" parent="GameOverMenu"]
scale = Vector2(0.67, 0.67)
texture = ExtResource("4_k3s11")
centered = false

[node name="ControlBtns" type="Control" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonMenu" type="Button" parent="GameOverMenu/ControlBtns"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -89.0
offset_right = -100.0
offset_bottom = -39.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.878431, 0.101961, 1)
theme_override_colors/font_focus_color = Color(1, 0.878431, 0.101961, 1)
theme_override_font_sizes/font_size = 30
text = "Voltar Menu"

[node name="ButtonReplay" type="Button" parent="GameOverMenu/ControlBtns"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -89.0
offset_right = 310.0
offset_bottom = -39.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.88, 0.1, 1)
theme_override_colors/font_focus_color = Color(1, 0.878431, 0.101961, 1)
theme_override_font_sizes/font_size = 30
text = "Jogar de Novo"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -25.0

[connection signal="pressed" from="PauseMenu/VBoxContainer/ButtonJogo" to="." method="_on_button_jogo_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
[connection signal="pressed" from="GameOverMenu/ControlBtns/ButtonMenu" to="." method="_on_button_menu_gameover_pressed"]
[connection signal="pressed" from="GameOverMenu/ControlBtns/ButtonReplay" to="." method="_on_button_replay_pressed"]
